--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ header a{
 
     color: white;
     font-size: 1.4vw;
-    margin-right:50px;
-    margin-top:-50px;
+    margin-right: 2vw;
+    margin-top:-1vw;
 }
 .description p{
     font-size: 3vw;
