--- a/style.css
+++ b/style.css
@@ -50,10 +50,10 @@ header a{
 }
 h2{
     color:white;
-    font-size:3.5rem;
+    font-size:4.5vw;
 }
 p{
-    font-size: 1.7rem;
+    font-size: 2.5vw;
     color: white;
     width:50%;
     padding: auto;
@@ -70,10 +70,10 @@ p{
     width: 80vw;
     display: grid;
     grid-template-columns: auto auto auto;
-    grid-gap:20px;
-    padding:10px;
-    padding-top:50px;
-    padding-bottom:50px;
+    grid-gap:1vw;
+    padding:.5vw;
+    padding-top:3vw;
+    padding-bottom:3vw;
     flex: none;
 }
 .gallery div img{
@@ -91,24 +91,24 @@ p{
     padding-top: -300px; */
 }
 .btn{
-    width:50px;
+    width:3vw;
     cursor: pointer;
-    margin: 40px;
+    margin: 2vw;
 }
 .gallery div img:hover{
     transform: scale(1.3);
 }
 a{
     color: white;
-    font-size: 1.4rem;
+    font-size: 2.5vw;
 }
 #brickGallery div{
     width: 80vw;
     display: grid;
     grid-template-columns: auto auto auto auto auto auto;
-    grid-gap:20px;
-    padding:10px;
-    padding-top:100px;
-    padding-bottom:100px;
+    grid-gap:1vw;
+    padding:.5vw;
+    padding-top:5vw;
+    padding-bottom:5vw;
     flex: none;
 }
