--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body{
     margin:0px;
     margin-top:-30px;
-    background-color: rgb(120,50,10);
+/*     background-color: rgb(120,50,10); */
+    background-image: linear-gradient(to right, rgb(120,50,10) , rgb(90,30,7));
 }
 header{
     /* background-color: linear-gradient(0deg,rgb(180,80,30),rgb(180,200,30)); */
