--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ a{
     padding-bottom:5vw;
     flex: none;
 }
-#tdGallery div{
+/* #tdGallery div{
     width: 80vw;
     display: grid;
     grid-template-columns: auto auto auto auto auto auto;
@@ -123,4 +123,4 @@ a{
     padding-top:5vw;
     padding-bottom:5vw;
     flex: none;
-}
+} */
